--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "flow": "0.2.3",
+    "load-json-file": "7.0.1",
     "playbook-ui": "10.17.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
